--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="icon.png" type="image/png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.png" type="image/png">
         <title>City</title>
         <style>
             body {
-                background: black;
+                background: rgb(177, 166, 149);
                 height: 100%;
                 margin: 0;
             }
